PM2.5未計測の場合の別パターンがあった、スペース。